# x16-PRos-libc-actionstest

./: .gitignore  CMakeLists.txt  LICENSE  progress.md
.github/workflows/: cmake-single-platform.yml
include/: ctype.h  float.h  iso646.h  limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  types.h
src/: ctype.c  stdio.c  stdlib.c  string.c
src/ctype/: isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/internal/: int64.c  int64.h  uint64.c  uint64.h
src/stdlib/: abs.c  atoi.c  atol.c  atoll.c  div.c  labs.c  ldiv.c  llabs.c  lldiv.c
src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strxfrm.c
